# chaeshin

./: .dockerignore  .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  VISION.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
chaeshin/: __init__.py  case_store.py  event_log.py  graph_executor.py  planner.py  schema.py  search.py
chaeshin-monitor/: package-lock.json  package.json  pnpm-lock.yaml
chaeshin-monitor/.claude/: launch.json
chaeshin/agents/: __init__.py  base.py  decomposer.py  executor_agent.py  orchestrator.py  react_agent.py  reflection.py
chaeshin/cli/: __main__.py  main.py  seed_cmd.py
chaeshin/integrations/: __init__.py  chaebi.py  chroma.py  openai.py  weaviate.py
chaeshin/migrations/: __init__.py  m001_json_to_sqlite_l1.py  m002_outcome_status.py  m003_drop_layer.py
chaeshin/seed/: __init__.py  bulk_generator.py  promoter.py  scenario_prompt.py  store.py
chaeshin/storage/: __init__.py  sqlite_backend.py
docs/: architecture.md  case-schema.md  preview.html  quickstart.md
docs/de/: README.md
docs/es/: README.md
docs/fr/: README.md
examples/: _react_common.py
experiments/: .gitignore  README.md  __main__.py  aggregate.py  requirements.txt  run_matrix.py  runner.py  to_latex.py
scripts/: run-local.sh  run-seed.sh  seed-quickstart.sh
tests/: test_agents_outcome_status.py  test_case_store.py  test_decompose.py  test_event_log.py  test_graph_executor.py  test_schema.py  test_seed_cli.py  test_seed_dedup.py  test_seed_promote.py  test_seed_store.py  test_sqlite_backend.py
(+94 files in other folders)
